# grand-challenge-ai4life-cidc-2025

./: .gitignore  README.md  download_data.sh  main.py  notebook.ipynb  pyproject.toml
results/: result_SNR.csv
src/: dataset.py  eval.py  inference.py  training.py
src/model_arch/: unet.py
src/models/: unet.py
